--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" 
     integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" 
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+    <link rel="shortcut icon" href="./img/Logo_Academia_de_Musica_Moderno_Negro_Morado_4-removebg-preview.png" 
+    type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/bienvenida.css">
@@ -17,7 +18,7 @@
         <nav class="navbar navbar-expand-lg color fixed-top" >
             <div class="container">
                 <a class="class-a" href="#">
-                    <span class="text">TheBeat</span>
+                  <img src="./img/Logo_Academia_de_Musica_Moderno_Negro_Morado_4-removebg-preview.png" class="img-logo" alt="" width="150">
                   </a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -25,54 +26,54 @@
                   <div class="collapse navbar-collapse" id="">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
                       <li class="nav-item">
-                        <a class="nav-link  color-text" aria-current="page" href="#">Iniciar Sesion</a>
+                        <a class="nav-link  color-text" aria-current="page" href="./pages/login.html">Iniciar Sesion</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link color-text" aria-current="page" href="#">Subcribirse</a>
+                        <a class="nav-link color-text" aria-current="page" href="./pages/register.html">Subcribirse</a>
                       </li>
               </div>
             </div>
           </nav>
     </header>
     <main>
-        <div id="carouselExampleCaptions" class="carousel slide">
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-            </div> 
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="./img/bienvenida.jpeg" class="d-block w-100" alt="...">
-                <div class="carousel-caption ">
-                  <h5>¡Bienvenido!</h5>
-                  <p>¡Escucha, siente, vive! Tu experiencia musical comienza aquí!</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="./img/pexels-photo-1190297.jpeg" class="d-block w-100" alt="...">
-                <div class="carousel-caption ">
-                  <h5>¡Siente tu vibra!</h5>
-                  <p>Explora, escucha, disfruta: Encuentra tu melodía en nuestra plataforma.</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="./img/pexels-photo-6686443.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption ">
-                  <h5>¡A Tan solo a un clic de distancia!</h5>
-                  <p>Tu playlist perfecta, siempre al alcance: Descubre nuevas melodías aquí.</p>
-                </div>
-              </div>
+      <div id="carouselExampleCaptions" class="carousel slide">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="/img/bienvenida.jpeg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>¡Bienvenido!</h5>
+              <p>¡Escucha, siente, vive! Tu experiencia musical comienza aquí!</p>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
           </div>
+          <div class="carousel-item">
+            <img src="./img/pexels-photo-1190297.jpeg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>¡Siente tu vibra!</h5>
+              <p>Explora, escucha, disfruta: Encuentra tu melodía en nuestra plataforma.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="./img/pexels-photo-6686443.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>¡A Tan solo a un clic de distancia!</h5>
+              <p>Tu playlist perfecta, siempre al alcance: Descubre nuevas melodías aquí.</p>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
           <!-- banner -->
           <div class="banner">
             <img src="./img/pexels-photo-13878642.webp" alt="Imagen del banner">
