cambios en el login

--- a/pages/login.html
+++ b/pages/login.html
@@ -18,7 +18,7 @@
 <body>
     <main>
 
-        <div class="d-flex justify-content-center align-content-center my-5 m-5">
+        <div class="d-flex justify-content-center align-content-center">
             <div class="container-form login m-5">
                 <div class="information">
                     <div class="info-childs">
