se crearon los meta

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="author" content="Gerardo Alagastin, Agustina Prado, Facundo Parizzi, Luciano Gamez."/>
+    <meta name="description" content="Somos una pagina web dedicada a la industria musical."/>
+    <meta name="keywords" content="Musica, Canciones, Album, Artista, Genero, Lista de reproduccion, Playlist, Podcast."/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <title>Pagina Principal</title>
