cambio de imagen en el index

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <a class="nav-link  color-text" aria-current="page" href="./pages/login.html">Iniciar Sesion</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link color-text" aria-current="page" href="./pages/register.html">Subcribirse</a>
+                        <a class="nav-link color-tgit ext" aria-current="page" href="./pages/register.html">Subcribirse</a>
                       </li>
               </div>
             </div>
