conectate las paginas correspondientes a los botones

--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
                 <div class="card">
                     <h2>¡Bienvenido!</h2>
                     <p>¡Escucha, siente, vive! Tu experiencia musical comienza aquí!</p>
-                    <button class="btn btn1">Iniciar Sesion</button>
-                    <button class="btn btn1">Subcribirse</button>
+                    <button id="btnBannerLogin" class="btn btn1">Iniciar Sesion</button>
+                    <button id="btnBannerRegister" class="btn btn1">Subcribirse</button>
                   </div>
             </div>
           </div>
