--- a/pages/homeUsuario.html
+++ b/pages/homeUsuario.html
@@ -13,7 +13,7 @@
       <div class="navegacion">
         <nav class="navbar navbar-expand-lg">
           <div class="container-fluid">
-            <img src="/img/logo/TheBeatAzul-sinfondochica.png" alt="" width="100">
+           <a href="../pages/homeUsuario.html"> <img src="/img/logo/TheBeatAzul-sinfondochica.png" alt="" width="100"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
