--- a/pages/homeadmin.html
+++ b/pages/homeadmin.html
@@ -30,7 +30,7 @@
       <input type="text" id="nombre" placeholder="Nombre" />
       <input type="text" id="artista" placeholder="Artista" />
       <input type="text" id="genero" placeholder="Género" />
-      <button type="submit">Agregar</button>
+      <button class="color-text" type="submit">Agregar</button>
     </form>
 
     <script src="/js/homeadmin.js"></script>
