se edito vista de usuario logueado y logos

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="author" content="Gerardo Alagastin, Agustina Prado, Facundo Parizzi, Luciano Gamez."/>
+    <meta name="author" content="Gerardo Alagastin, Agustina Prado, Facundo Parizzi."/>
     <meta name="description" content="Somos una pagina web dedicada a la industria musical."/>
     <meta name="keywords" content="Musica, Canciones, Album, Artista, Genero, Lista de reproduccion, Playlist, Podcast."/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,7 +21,7 @@
         <nav class="navbar navbar-expand-lg color fixed-top" >
             <div class="container">
                 <a class="class-a" href="#">
-                  <img src="./img/Logo_Academia_de_Musica_Moderno_Negro_Morado_4-removebg-preview.png" class="img-logo" alt="" width="150">
+                  <img src="/img/logo/TheBeatAzul-sinfondochica.png" class="img-logo" alt="" width="150">
                   </a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
