--- a/pages/homeadmin.html
+++ b/pages/homeadmin.html
@@ -2,9 +2,13 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
+    <meta name="author" content="Gerardo Alagastin, Agustina Prado, Facundo Parizzi."/>
+    <meta name="description" content="Somos una pagina web dedicada a la industria musical."/>
+    <meta name="keywords" content="Musica, Canciones, Album, Artista, Genero, Lista de reproduccion, Playlist, Podcast."/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Administración de Canciones</title>
     <link rel="stylesheet" href="/css/homeadmin.css" />
+    <link rel="shortcut icon" href="/img/logo/TheBeatAzul-sinfondochica.png" type="image/x-icon">
   </head>
   <body>
     <h1>Administración de Canciones</h1>
