--- a/pages/login.html
+++ b/pages/login.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="author" content="Gerardo Alagastin, Agustina Prado, Facundo Parizzi."/>
+    <meta name="description" content="Somos una pagina web dedicada a la industria musical."/>
+    <meta name="keywords" content="Musica, Canciones, Album, Artista, Genero, Lista de reproduccion, Playlist, Podcast."/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,7 +15,7 @@
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/login-register.css">
-    <link rel="shortcut icon" href="../img/Logo_Academia_de_Musica_Moderno_Negro_Morado_4-removebg-preview.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/img/logo/TheBeatAzul-sinfondochica.png" type="image/x-icon">
     <title>Iniciar Sesion</title>
 </head>
 <body>
@@ -23,7 +26,7 @@
                 <div class="information">
                     <div class="info-childs">
                            <a href="../index.html">
-                            <img src="../img/Logo_Academia_de_Musica_Moderno_Negro_Morado_4-removebg-preview.png" width="100" alt="logo">
+                            <img src="/img/logo/TheBeatAzul-sinfondochica.png" width="100" alt="logo">
                            </a>
                         <h2>¡¡Bienvenido nuevamente!!</h2>
                         <p></p>
