--- a/pages/register.html
+++ b/pages/register.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Gerardo Alagastin, Parizzi Facundo, Gamez Luciano, Prado Agustina"/>
-    <meta name="description" content="Somos una pagina web donde encontraras todo tipo de contenido auditivo"/>
-    <meta name="keywords" content="musica, album, playlist, artistas, musicos, podcast "/>
+    <meta name="author" content="Gerardo Alagastin, Agustina Prado, Facundo Parizzi."/>
+    <meta name="description" content="Somos una pagina web dedicada a la industria musical."/>
+    <meta name="keywords" content="Musica, Canciones, Album, Artista, Genero, Lista de reproduccion, Playlist, Podcast."/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
@@ -14,7 +14,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/login-register.css">
-    <link rel="shortcut icon" href="../img/Logo_Academia_de_Musica_Moderno_Negro_Morado_4-removebg-preview.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/img/logo/TheBeatAzul-sinfondochica.png" type="image/x-icon">
     <title>Registrarse</title>
 </head>
 <body>
@@ -25,7 +25,7 @@
                 <div class="information">
                     <div class="info-childs">
                        <a href="../index.html">
-                        <img src="../img/Logo_Academia_de_Musica_Moderno_Negro_Morado_4-removebg-preview.png" width="100" alt="logo">
+                        <img src="/img/logo/TheBeatAzul-sinfondochica.png" width="100" alt="logo">
                        </a>
                         <h2>Bienvenido</h2>
                         <p>Para unirte a nuestra comunidad por favor Inicia Sesion con tus datos</p>
