complete la logica en la carpeta login.js

--- a/pages/login.html
+++ b/pages/login.html
@@ -27,7 +27,7 @@
                            </a>
                         <h2>¡¡Bienvenido nuevamente!!</h2>
                         <p></p>
-                        <input class="btnB" type="button" value="Registrarse" id="sign-upL">
+                        <input class="btnB" type="button" value="Registrarse" id="sign-in">
                     </div>
                 </div>
                 <div class="form-information">
@@ -42,11 +42,11 @@
                         <form class="form">
                             <label id="labelUsuario">
                                 <i class='bx bx-user'></i>
-                                <input type="text" placeholder="Usuario" id="usuarioL" name="usuario">
+                                <input type="text" placeholder="Usuario" id="usuario" name="usuario">
                             </label>
                             <label>
                                 <i class='bx bx-lock-alt' ></i>
-                                <input type="password" placeholder="Contraseña" id="ContraseniaL" name="Contrasenia">
+                                <input type="password" placeholder="Contraseña" id="Contrasenia" name="Contrasenia">
                             </label>
                             <button type="submit" class="btn" id="IniciaSesion">Iniciar Sesion</button>
                         </form>
