--- a/pages/homeUsuario.html
+++ b/pages/homeUsuario.html
@@ -110,7 +110,7 @@
               <!-- Slide-end -->
             </div>
   
-            <div class="tranding-slider-control">
+            <!-- <div class="tranding-slider-control">
               <div class="swiper-button-prev slider-arrow">
                 <ion-icon name="arrow-back-outline"></ion-icon>
               </div>
@@ -118,7 +118,7 @@
                 <ion-icon name="arrow-forward-outline"></ion-icon>
               </div>
               <div class="swiper-pagination"></div>
-            </div>
+            </div> -->
   
           </div>
         </div>
