--- a/pages/homeUsuario.html
+++ b/pages/homeUsuario.html
@@ -123,6 +123,58 @@
           </div>
         </div>
       </section>
+
+      <div class="swiper-wrapper">
+        <!-- Slide-start -->
+        <div class="swiper-slide tranding-slide">
+          <div class="tranding-slide-img">
+            <img src="/img/portada/re discover bad bunny.webp" alt="Tranding">
+          </div>
+          </div>
+        <!-- Slide-end -->
+        <!-- Slide-start -->
+        <div class="swiper-slide tranding-slide">
+          <div class="tranding-slide-img">
+            <img src="/img/portada/re discover bizza.webp" alt="Tranding">
+          </div>
+          </div>
+        <!-- Slide-end -->
+        <!-- Slide-start -->
+        <div class="swiper-slide tranding-slide">
+          <div class="tranding-slide-img">
+            <img src="/img/portada/re discover duki.webp" alt="Tranding">
+          </div>
+          </div>
+        <!-- Slide-end -->
+        <!-- Slide-start -->
+        <div class="swiper-slide tranding-slide">
+          <div class="tranding-slide-img">
+            <img src="/img/portada/re discover emilia.webp" alt="Tranding">
+          </div>
+          </div>
+        <!-- Slide-end -->
+        <!-- Slide-start -->
+        <div class="swiper-slide tranding-slide">
+          <div class="tranding-slide-img">
+            <img src="/img/portada/re discover la t y la m.webp" alt="Tranding">
+          </div>
+          </div>
+        <!-- Slide-end -->
+        <!-- Slide-start -->
+        <div class="swiper-slide tranding-slide">
+          <div class="tranding-slide-img">
+            <img src="/img/portada/re discover tiago.webp" alt="Tranding">
+          </div>
+          </div>
+        <!-- Slide-end -->
+        <!-- Slide-start -->
+        <div class="swiper-slide tranding-slide">
+          <div class="tranding-slide-img">
+            <img src="/img/portada/re discover taylor.webp" alt="Tranding">
+          </div>
+          </div>
+        <!-- Slide-end -->
+      </div>
     </main>
     
     <footer>
