--- a/pages/login.html
+++ b/pages/login.html
@@ -15,7 +15,7 @@
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/login-register.css">
-    <link rel="shortcut icon" href="/img/logo/TheBeatAzul-sinfondochica.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../img/Logo_Academia_de_Musica_Moderno_Negro_Morado_4-removebg-preview.png" type="image/x-icon">
     <title>Iniciar Sesion</title>
 </head>
 <body>
@@ -26,11 +26,11 @@
                 <div class="information">
                     <div class="info-childs">
                            <a href="../index.html">
-                            <img src="/img/logo/TheBeatAzul-sinfondochica.png" width="100" alt="logo">
+                            <img src="../img/Logo_Academia_de_Musica_Moderno_Negro_Morado_4-removebg-preview.png" width="100" alt="logo">
                            </a>
                         <h2>¡¡Bienvenido nuevamente!!</h2>
                         <p></p>
-                        <input class="btnB" type="button" value="Registrarse" id="sign-upL">
+                        <input class="btnB" type="button" value="Registrarse" id="sign-in">
                     </div>
                 </div>
                 <div class="form-information">
@@ -45,11 +45,11 @@
                         <form class="form">
                             <label id="labelUsuario">
                                 <i class='bx bx-user'></i>
-                                <input type="text" placeholder="Usuario" id="usuarioL" name="usuario">
+                                <input type="text" placeholder="Usuario" id="usuario" name="usuario">
                             </label>
                             <label>
                                 <i class='bx bx-lock-alt' ></i>
-                                <input type="password" placeholder="Contraseña" id="ContraseniaL" name="Contrasenia">
+                                <input type="password" placeholder="Contraseña" id="Contrasenia" name="Contrasenia">
                             </label>
                             <button type="submit" class="btn" id="IniciaSesion">Iniciar Sesion</button>
                         </form>
