--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <a class="nav-link  color-text" aria-current="page" href="./pages/login.html">Iniciar Sesion</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link color-tgit ext" aria-current="page" href="./pages/register.html">Subcribirse</a>
+                        <a class="nav-link color-text" aria-current="page" href="./pages/register.html">Subcribirse</a>
                       </li>
               </div>
             </div>
@@ -40,46 +40,20 @@
     </header>
     <main>
       <div id="carouselExampleCaptions" class="carousel slide">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="/img/bienvenida.jpeg" class="d-block w-100" alt="...">
+            <img src="./img/pexels-photo-1190297.jpeg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>¡Bienvenido!</h5>
               <p>¡Escucha, siente, vive! Tu experiencia musical comienza aquí!</p>
             </div>
           </div>
-          <div class="carousel-item">
-            <img src="./img/pexels-photo-1190297.jpeg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>¡Siente tu vibra!</h5>
-              <p>Explora, escucha, disfruta: Encuentra tu melodía en nuestra plataforma.</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="./img/pexels-photo-6686443.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>¡A Tan solo a un clic de distancia!</h5>
-              <p>Tu playlist perfecta, siempre al alcance: Descubre nuevas melodías aquí.</p>
-            </div>
-          </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
       </div>
           <!-- banner -->
           <div class="banner">
-            <img src="./img/pexels-photo-13878642.webp" alt="Imagen del banner">
+            <img src="./img/pexels-photo-1190298.jpeg" class="imgbanner" alt="Imagen del banner">
+            <img src="./img/pexels-photo-13878642.webp"  class="imabanner" alt="">
             <div class="d-flex justify-content-center align-items-center flex-column">
                 <div class="card">
                     <h2>¡Bienvenido!</h2>
@@ -91,7 +65,7 @@
           </div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"> </script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="./js/bienvenida.js"></script>
 </body>
