odificaciones en homeUsuario.html, homeUsuario.css y homeUsuario.js

--- a/pages/homeUsuario.html
+++ b/pages/homeUsuario.html
@@ -52,7 +52,7 @@
               </form>
               <ul class="navbar-nav me-2 mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link text-white" href="#">Mi Cuenta</a>
+                  <box-icon name='user-circle' class="icon" type='solid' >Mi Cuenta</box-icon>
                 </li>
               </ul>
             </div>
@@ -70,7 +70,7 @@
         <div class="row">
             <div class="col-lg-4 col-md-4 col-12 mb-4">
                 <div class="cardCancion">
-                  <div class="cardCancion d-flex flex-row">
+                  <div class="cardCancion d-flex flex-row" onclick="redirectTo()">
                     <div class="card-img-container">
                       <img src="../imagenHomeUsuario/mr1.webp" class="img-fluid" alt="Imagen 3">
                     </div>
@@ -83,7 +83,7 @@
             </div>
               <div class="col-lg-4 col-md-4 col-12 mb-4">
                 <div class="cardCancion">
-                  <div class="cardCancion d-flex flex-row">
+                  <div class="cardCancion d-flex flex-row" onclick="redirectTo()">
                     <div class="card-img-container">
                       <img src="../imagenHomeUsuario/music8.webp" class="img-fluid" alt="Imagen 3">
                     </div>
@@ -96,7 +96,7 @@
               </div> 
               <div class="col-lg-4 col-md-4 col-12 mb-4">
                 <div class="cardCancion">
-                  <div class="cardCancion d-flex flex-row">
+                  <div class="cardCancion d-flex flex-row" onclick="redirectTo()">
                     <div class="card-img-container">
                       <img src="../imagenHomeUsuario/mr2.webp" class="img-fluid" alt="Imagen 3">
                     </div>
@@ -113,7 +113,7 @@
         <div class="row">
             <div class="col-lg-4 col-md-4 col-12 mb-4">
                 <div class="cardCancion">
-                  <div class="cardCancion d-flex flex-row">
+                  <div class="cardCancion d-flex flex-row" onclick="redirectTo()">
                     <div class="card-img-container">
                       <img src="../imagenHomeUsuario/mr3.webp" class="img-fluid" alt="Imagen 3">
                     </div>
@@ -126,7 +126,7 @@
             </div>
               <div class="col-lg-4 col-md-4 col-12 mb-4">
                 <div class="cardCancion">
-                  <div class="cardCancion d-flex flex-row">
+                  <div class="cardCancion d-flex flex-row" onclick="redirectTo()">
                     <div class="card-img-container">
                       <img src="../imagenHomeUsuario/mr4.webp" class="img-fluid" alt="Imagen 3">
                     </div>
@@ -139,7 +139,7 @@
               </div> 
               <div class="col-lg-4 col-md-4 col-12 mb-4">
                 <div class="cardCancion">
-                  <div class="cardCancion d-flex flex-row">
+                  <div class="cardCancion d-flex flex-row" onclick="redirectTo()">
                     <div class="card-img-container">
                       <img src="../imagenHomeUsuario/mr5.webp" class="img-fluid" alt="Imagen 3">
                     </div>
@@ -156,7 +156,7 @@
         <div class="row">
             <div class="col-lg-4 col-md-4 col-12 mb-4">
                 <div class="cardCancion">
-                  <div class="cardCancion d-flex flex-row">
+                  <div class="cardCancion d-flex flex-row" onclick="redirectTo()">
                     <div class="card-img-container">
                       <img src="../imagenHomeUsuario/mr8.webp" class="img-fluid" alt="Imagen 3">
                     </div>
@@ -169,7 +169,7 @@
             </div>
               <div class="col-lg-4 col-md-4 col-12 mb-4">
                 <div class="cardCancion">
-                  <div class="cardCancion d-flex flex-row">
+                  <div class="cardCancion d-flex flex-row" onclick="redirectTo()">
                     <div class="card-img-container">
                       <img src="../imagenHomeUsuario/mr6.webp" class="img-fluid" alt="Imagen 3">
                     </div>
@@ -182,7 +182,7 @@
               </div> 
               <div class="col-lg-4 col-md-4 col-12 mb-4">
                 <div class="cardCancion">
-                  <div class="cardCancion d-flex flex-row">
+                  <div class="cardCancion d-flex flex-row" onclick="redirectTo()">
                     <div class="card-img-container">
                       <img src="../imagenHomeUsuario/mr7.webp" class="img-fluid" alt="Imagen 3">
                     </div>
