se modifico la pagina homeUsuario.html y se creo music.html, music.css y music.js

--- a/pages/homeUsuario.html
+++ b/pages/homeUsuario.html
@@ -67,133 +67,11 @@
      <section>
       <h3  class="ms-5 mt-5 text-light">Recien Escuchado</h3>
       <div class="container my-3" >
-        <div class="row">
-            <div class="col-lg-4 col-md-4 col-12 mb-4">
-                <div class="cardCancion">
-                  <div class="cardCancion d-flex flex-row" onclick="redirectTo()">
-                    <div class="card-img-container">
-                      <img src="../imagenHomeUsuario/mr1.webp" class="img-fluid" alt="Imagen 3">
-                    </div>
-                    <div class="card-body">
-                      <p class="ms-5">La Diabla</p>
-                      <p class="ms-5">Xavi</p>
-                  </div>
+           <div class="row d-flex justify-content-center align-items-center" id="musicReciente">
                 </div>
-              </div>
             </div>
-              <div class="col-lg-4 col-md-4 col-12 mb-4">
-                <div class="cardCancion">
-                  <div class="cardCancion d-flex flex-row" onclick="redirectTo()">
-                    <div class="card-img-container">
-                      <img src="../imagenHomeUsuario/music8.webp" class="img-fluid" alt="Imagen 3">
-                    </div>
-                    <div class="card-body">
-                      <p class="ms-5">Poco a Poco</p>
-                      <p class="ms-5">Xavi & Los Dareyes De La Sierra</p>
-                  </div>
-                  </div>
-                </div>
-              </div> 
-              <div class="col-lg-4 col-md-4 col-12 mb-4">
-                <div class="cardCancion">
-                  <div class="cardCancion d-flex flex-row" onclick="redirectTo()">
-                    <div class="card-img-container">
-                      <img src="../imagenHomeUsuario/mr2.webp" class="img-fluid" alt="Imagen 3">
-                    </div>
-                    <div class="card-body">
-                      <p class="ms-5">Primera Cita</p>
-                      <p class="ms-5">Carion Leon</p>
-                  </div>
-                  </div>
-                </div>
-              </div> 
-      </div> 
+       </div> 
 
-      <div class="container my-3" >
-        <div class="row">
-            <div class="col-lg-4 col-md-4 col-12 mb-4">
-                <div class="cardCancion">
-                  <div class="cardCancion d-flex flex-row" onclick="redirectTo()">
-                    <div class="card-img-container">
-                      <img src="../imagenHomeUsuario/mr3.webp" class="img-fluid" alt="Imagen 3">
-                    </div>
-                    <div class="card-body">
-                      <p class="ms-5">Te Quiero</p>
-                      <p class="ms-5">Hombres G & Carin Leor</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-              <div class="col-lg-4 col-md-4 col-12 mb-4">
-                <div class="cardCancion">
-                  <div class="cardCancion d-flex flex-row" onclick="redirectTo()">
-                    <div class="card-img-container">
-                      <img src="../imagenHomeUsuario/mr4.webp" class="img-fluid" alt="Imagen 3">
-                    </div>
-                    <div class="card-body">
-                      <p class="ms-5">Todo Bien</p>
-                      <p class="ms-5">Luis R Conriquez & El Rabbanito</p>
-                  </div>
-                  </div>
-                </div>
-              </div> 
-              <div class="col-lg-4 col-md-4 col-12 mb-4">
-                <div class="cardCancion">
-                  <div class="cardCancion d-flex flex-row" onclick="redirectTo()">
-                    <div class="card-img-container">
-                      <img src="../imagenHomeUsuario/mr5.webp" class="img-fluid" alt="Imagen 3">
-                    </div>
-                    <div class="card-body">
-                      <p class="ms-5">Contigo</p>
-                      <p class="ms-5">Karon G & Tiesto</p>
-                  </div>
-                  </div>
-                </div>
-              </div> 
-      </div> 
-
-            <div class="container my-3" >
-        <div class="row">
-            <div class="col-lg-4 col-md-4 col-12 mb-4">
-                <div class="cardCancion">
-                  <div class="cardCancion d-flex flex-row" onclick="redirectTo()">
-                    <div class="card-img-container">
-                      <img src="../imagenHomeUsuario/mr8.webp" class="img-fluid" alt="Imagen 3">
-                    </div>
-                    <div class="card-body">
-                      <p class="ms-5">FIRST LOVE</p>
-                      <p class="ms-5">Oscar Ortiz & Edgardo Nuñez</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-              <div class="col-lg-4 col-md-4 col-12 mb-4">
-                <div class="cardCancion">
-                  <div class="cardCancion d-flex flex-row" onclick="redirectTo()">
-                    <div class="card-img-container">
-                      <img src="../imagenHomeUsuario/mr6.webp" class="img-fluid" alt="Imagen 3">
-                    </div>
-                    <div class="card-body">
-                      <p class="ms-5">Fresas de la Capital (Remix)</p>
-                      <p class="ms-5">Oscar Maydon, Jaque Mate & Legion Rg</p>
-                  </div>
-                  </div>
-                </div>
-              </div> 
-              <div class="col-lg-4 col-md-4 col-12 mb-4">
-                <div class="cardCancion">
-                  <div class="cardCancion d-flex flex-row" onclick="redirectTo()">
-                    <div class="card-img-container">
-                      <img src="../imagenHomeUsuario/mr7.webp" class="img-fluid" alt="Imagen 3">
-                    </div>
-                    <div class="card-body">
-                      <p class="ms-5">EL AMOR DE SU VIDA</p>
-                      <p class="ms-5">Grupo  Frontera & Grupo Firme</p>
-                  </div>
-                  </div>
-                </div>
-              </div> 
-      </div> 
      </section>
       <section class="my-4">
         <h3 class="ms-5 mt-5 text-light">Artistas Populares</h3>
