se mejoraron unas vistas y se cambio el logo

--- a/pages/homeUsuario.html
+++ b/pages/homeUsuario.html
@@ -65,8 +65,8 @@
     <main>
 
      <section>
-      <h3  class="ms-5 mt-5 text-light">Recien Escuchado</h3>
-      <div class="container my-3" >
+      <h3  class="text-light ms-5">Recien Escuchado</h3>
+      <div class="container my-3 " >
            <div class="row d-flex justify-content-center align-items-center" id="musicReciente">
                 </div>
             </div>
@@ -186,7 +186,7 @@
           </div>
           <div class="col-md-6 text-center text-md-right">
             <!-- Columna derecha con el logo de tu página -->
-            <img src="/img/Logo_Academia_de_Musica_Moderno_Negro_Morado_4-removebg-preview.png" width="80" alt="logo">
+            <img src="/img/logo/TheBeatAzul-sinfondochica.png" width="80" alt="logo">
           </div>
         </div>
       </div>
