--- a/pages/homeUsuario.html
+++ b/pages/homeUsuario.html
@@ -57,6 +57,9 @@
                 <li class="nav-item">
                   <box-icon name='user-circle' class="icon" type='solid' >Mi Cuenta</box-icon>
                 </li>
+                <li class="nav-item">
+                  <button class="nav-link text-white" id="cerrarSesion" onclick="cerrarSesion()">Cerrar Sesión</button>
+                </li>
               </ul>
             </div>
           </div>
