se realizo el boton de cerrar Seccion

--- a/pages/homeUsuario.html
+++ b/pages/homeUsuario.html
@@ -58,7 +58,7 @@
               </form>
               <ul class="navbar-nav me-2 mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <box-icon name='user-circle' class="icon" type='solid' >Mi Cuenta</box-icon>
+                  <button class="cerrarSeccion" onclick="cerrarSeccion()">Cerrar Seccion</button>
                 </li>
               </ul>
             </div>
@@ -221,7 +221,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    
     <script src="/js/homeUsurio.js"></script>
 </body>
 </html>
