--- a/pages/homeadmin.html
+++ b/pages/homeadmin.html
@@ -21,12 +21,14 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="../css/homeUsuario.css">
     <link rel="stylesheet" href="/css/homeadmin.css" />
     <link
       rel="shortcut icon"
       href="/img/logo/TheBeatAzul-sinfondochica.png"
       type="image/x-icon"
     />
+
     <title>Pagina Administrador</title>
   </head>
   <body>
@@ -119,9 +121,7 @@
               </form>
               <ul class="navbar-nav me-2 mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <box-icon name="user-circle" class="icon" type="solid"
-                    >Mi Cuenta</box-icon
-                  >
+                  <button class="cerrarSeccion" onclick="cerrarSeccion()">Cerrar Seccion</button>
                 </li>
               </ul>
             </div>
@@ -199,5 +199,6 @@
     ></script>
     <script src="/js/homeadmin.js"></script>
     <script src="/js/homeAdminUsuario.js"></script>
+    <script src="../js/homeUsurio.js"></script>
   </body>
 </html>
