--- a/pages/homeUsuario.html
+++ b/pages/homeUsuario.html
@@ -58,7 +58,7 @@
               </form>
               <ul class="navbar-nav me-2 mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <button class="cerrarSeccion" onclick="cerrarSeccion()">Cerrar Seccion</button>
+                  <button class="cerrarSeccion" onclick="cerrarSeccion()">Cerrar Secion</button>
                 </li>
               </ul>
             </div>
