--- a/pages/homeadmin.html
+++ b/pages/homeadmin.html
@@ -121,7 +121,7 @@
               </form>
               <ul class="navbar-nav me-2 mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <button class="cerrarSeccion" onclick="cerrarSeccion()">Cerrar Seccion</button>
+                  <button class="cerrarSeccion" onclick="cerrarSeccion()">Cerrar Sesion</button>
                 </li>
               </ul>
             </div>
@@ -153,7 +153,6 @@
           <tr>
             <th>Nombre</th>
             <th>Artista</th>
-            <th>Género</th>
             <th>Acciones</th>
           </tr>
         </thead>
